# trend-alert

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: trending.yml
